# wc_go

./: .#todo.tx  README.md  a.out  generate_non_ascii_data.c  generate_non_ascii_data.c~  go.mod  lorem_ipsum.tx  lorem_ipsum_count.tx  python_packaging.md  python_packaging.md~  readme.md  test.go~  test_plan.tx  test_plan.tx~  todo.tx  todo.tx~  wc.go  wc.md  wc.py  wc_test.go
test_data/: generate_utf_16_data.go
wc_cli/: go.mod  wc_cli.go  wc_cli.go~
wc_lib/: wc_lib.go  wc_lib.go~  wc_lib_test.go  wc_lib_test.go~
wc_pkg_py/: LICENSE  README.md  pyproject.toml  pyproject.toml~
wc_pkg_py/src/wc_go/: wc.py  wc.py~
