[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wc_go"
authors = [
  { name="Thomas Prior" },
]
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
wc_go = "wc_go.wc:main"
